--- a/EEG_based_Emotion_Recognition_Using_KNN_model(with_32_channels).ipynb
+++ b/EEG_based_Emotion_Recognition_Using_KNN_model(with_32_channels).ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 151,
       "metadata": {
         "id": "rbo8RfXxXheR"
       },
@@ -46,12 +46,14 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import confusion_matrix\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn import metrics"
       ],
       "metadata": {
         "id": "374VIWhfXmgc"
       },
-      "execution_count": 77,
+      "execution_count": 152,
       "outputs": []
     },
     {
@@ -65,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XtXSyYadXpkQ",
-        "outputId": "ed6a8926-9379-4e37-fd6b-899c2451701e"
+        "outputId": "3f1a599d-ab58-4b1f-f540-2b52e3543bfb"
       },
-      "execution_count": 78,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +90,7 @@
         "os.getcwd()\n",
         "os.chdir('/content/drive/My Drive')"
       ],
-      "execution_count": 79,
+      "execution_count": 154,
       "outputs": []
     },
     {
@@ -137,12 +139,12 @@
       ],
       "metadata": {
         "id": "S1JPJnR0UoS_",
-        "outputId": "3bd5ded9-44f8-4066-a5e1-1fa8b49722a6",
+        "outputId": "d3ee8dad-8c1d-486a-98ad-e8fe30d8f8aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,12 +210,12 @@
       ],
       "metadata": {
         "id": "8V1rdIVUZ6m_",
-        "outputId": "2ff9cf6f-b387-44b6-e1d4-47c58b0510d9",
+        "outputId": "343ba8c6-4c7d-499d-b842-24b6d2403ad4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,12 +248,12 @@
       ],
       "metadata": {
         "id": "8FMIdT6vaRAW",
-        "outputId": "cae8ee6c-9f1f-49d5-dfcf-f12a96d29d67",
+        "outputId": "9053c330-a55b-49ec-d349-d968f4e8df32",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,12 +286,12 @@
       ],
       "metadata": {
         "id": "To7bZfVbaVcJ",
-        "outputId": "976d7d6b-441b-4b29-cab7-11630f94f870",
+        "outputId": "358bf955-4007-4fb3-e501-ce24ab76181b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 83,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,12 +324,12 @@
       ],
       "metadata": {
         "id": "7SzaAR_ZaXtJ",
-        "outputId": "f149945b-ff7b-4bca-de14-19394768536d",
+        "outputId": "d5b065a0-b50e-4373-e0aa-4152577de27f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,25 +367,23 @@
       "metadata": {
         "id": "1D1IwyOmaxjS"
       },
-      "execution_count": 85,
+      "execution_count": 160,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn import metrics\n",
         "model = KNeighborsClassifier(n_neighbors=5)\n",
         "model.fit(X_train, y_train)"
       ],
       "metadata": {
         "id": "lNCAKon3bqr3",
-        "outputId": "6e8b4a86-d642-4ac8-d984-3c07ae1a21fb",
+        "outputId": "76115fd9-b68f-45c8-b2d0-0dfc9b3c29dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 86,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 161
         }
       ]
     },
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "SpIiKbW9d9Wi"
       },
-      "execution_count": 87,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -418,12 +418,12 @@
       ],
       "metadata": {
         "id": "YdIS_4XNfo-Z",
-        "outputId": "b730f78a-59f5-405b-87a2-0b25e8058abc",
+        "outputId": "c96ae06c-097a-41ab-f83b-3de8c94a4682",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 88,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,13 +448,13 @@
       ],
       "metadata": {
         "id": "m-iNxPnPfsWk",
-        "outputId": "771bee2c-4bd1-400f-a3ac-8430902e753f",
+        "outputId": "935f0830-2e9a-41ca-a5fb-6cf03c08e00f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 89,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "display_data",
@@ -494,25 +494,23 @@
       "metadata": {
         "id": "Q_yhV_Ojepmv"
       },
-      "execution_count": 90,
+      "execution_count": 165,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn import metrics\n",
         "model = KNeighborsClassifier(n_neighbors=5)\n",
         "model.fit(X_train, y_train)"
       ],
       "metadata": {
         "id": "JxZ5KGu4ezva",
-        "outputId": "c8d96dc9-c1e0-4a82-8c7e-fb1326598417",
+        "outputId": "f8c72cc9-7b41-4ce9-8dae-0a173f9a163c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 91,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +520,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 166
         }
       ]
     },
@@ -535,7 +533,7 @@
       "metadata": {
         "id": "3dvAFE8qe560"
       },
-      "execution_count": 105,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -546,12 +544,12 @@
       ],
       "metadata": {
         "id": "GJ2oF0H3f9f_",
-        "outputId": "5da54c73-5dd1-4a33-821a-c7e6b2b16cb6",
+        "outputId": "70465887-7575-488e-bc5c-4120c328c790",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 93,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,13 +574,13 @@
       ],
       "metadata": {
         "id": "zYH2I1hxf_8L",
-        "outputId": "d0e4c38e-574e-4092-9cd5-5702ea99a52d",
+        "outputId": "682a14db-aa53-4799-fc54-b2bd1321898e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 94,
+      "execution_count": 169,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,25 +620,23 @@
       "metadata": {
         "id": "cNM1SxvZfB0c"
       },
-      "execution_count": 95,
+      "execution_count": 170,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn import metrics\n",
         "model = KNeighborsClassifier(n_neighbors=5)\n",
         "model.fit(X_train, y_train)"
       ],
       "metadata": {
         "id": "JURFnwN7fJCY",
-        "outputId": "d18f64e7-1979-40f4-b4e7-1c6faa7dbcb9",
+        "outputId": "3d518762-e3b3-44bd-8c88-cbe031d1518c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 96,
+      "execution_count": 171,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 171
         }
       ]
     },
@@ -663,7 +659,7 @@
       "metadata": {
         "id": "qv9syGu2e9t-"
       },
-      "execution_count": 97,
+      "execution_count": 172,
       "outputs": []
     },
     {
@@ -674,12 +670,12 @@
       ],
       "metadata": {
         "id": "fORjaqhhgh1J",
-        "outputId": "3f1d4c63-a888-4854-fe34-ba2d503faeca",
+        "outputId": "47332cc8-eaf1-4e14-c15d-d19ea932909c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,13 +700,13 @@
       ],
       "metadata": {
         "id": "JQzIm2MWgkus",
-        "outputId": "392a3941-84f9-4897-a131-0f74d66bdcca",
+        "outputId": "8fda0b6c-a1b9-46e5-a2bf-8fed2d5c9877",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 99,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "display_data",
@@ -750,25 +746,23 @@
       "metadata": {
         "id": "l4gnZMBCfDMl"
       },
-      "execution_count": 100,
+      "execution_count": 175,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn import metrics\n",
         "model = KNeighborsClassifier(n_neighbors=5)\n",
         "model.fit(X_train, y_train)"
       ],
       "metadata": {
         "id": "LAv0RaGXfOSQ",
-        "outputId": "680dfad9-4ab8-4a65-846b-9fdbf60c6072",
+        "outputId": "bcee2a49-c9c5-4117-8eef-46ff05b3c74a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 101,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +772,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 176
         }
       ]
     },
@@ -791,7 +785,7 @@
       "metadata": {
         "id": "mcWNpnwLe-0x"
       },
-      "execution_count": 102,
+      "execution_count": 177,
       "outputs": []
     },
     {
@@ -802,12 +796,12 @@
       ],
       "metadata": {
         "id": "5zom_ZM2ggdi",
-        "outputId": "36b87ef8-0c0c-4212-c69e-06d88069d0f5",
+        "outputId": "1bde97d7-b821-4a04-f9cb-c09bdb3fc3cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 103,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,13 +826,13 @@
       ],
       "metadata": {
         "id": "gKb17Jc1goDP",
-        "outputId": "74dd6928-0e06-4798-872d-340d5e2d7754",
+        "outputId": "5a68401d-2c70-48fd-9a7c-d4bbf4c79cf9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 104,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "display_data",
